syntax = "proto3";

package OpenNos.EthSwitch.Vlan;

message Port {
    string name = 1;
}

message NativeVlan {
    uint32 vid = 1;
    repeated Port ports = 2;
}

message VlanMgmtResult {
    enum Result {
        FAILED = 0;
        SUCCESS = 1;
    }

    Result result = 1;
}

service VlanMgmt {
    rpc SetNativeVlan (NativeVlan) returns (VlanMgmtResult) {}
}